--- a/app/templates/pages/error-404.html
+++ b/app/templates/pages/error-404.html
@@ -44,7 +44,7 @@
 
             <div class="row mt-3">
               <div class="col-6">
-                <a href={{ url_for('register') }} class="text-light"><small>Create account</small></a>
+                <a href="{{ url_for('register') }}" class="text-light"><small>Create account</small></a>
               </div>
               <div class="col-6 text-right">
                 <a href="https://appseed.us/support" class="text-light"><small>Get support</small></a>
