add doc modal, vid modal, and quiz modal
created an article.html file with the modals listed above

--- a/app/templates/includes/navigation.html
+++ b/app/templates/includes/navigation.html
@@ -58,7 +58,7 @@
               {% else %}
 
                 <li class="nav-item">
-                  <a class="nav-link nav-link-icon" href={{ url_for('login') }} data-toggle="tooltip" 
+                  <a class="nav-link nav-link-icon" href="{{ url_for('login') }}" data-toggle="tooltip" 
                      title="Authenticate">
                     <i class="fa fa-sign-in"></i> Login
                     <span class="nav-link-inner--text d-lg-none">Login</span>
