--- a/app/templates/pages/profile.html
+++ b/app/templates/pages/profile.html
@@ -60,10 +60,12 @@
             </div>
             <div class="text-center mt-5">
               <h3>
-                {{ current_user.user }}
+                Akshay
+                <!-- dynamic content -->
               </h3>
               <div class="h6 font-weight-300">
-                  {{ current_user.email }}
+                  akshay@akshay.com
+                  <!-- dynamic content -->
               </div>
               <div class="h6 mt-4"><i class="ni business_briefcase-24 mr-2"></i>Solution Manager - Creative Tim Officer</div>
               <div><i class="ni education_hat mr-2"></i>University of Computer Science</div>
