--- a/app/templates/pages/electroeg.html
+++ b/app/templates/pages/electroeg.html
@@ -61,11 +61,11 @@
                     <span>% completed</span>
                   </div>
                   <div class="progress-percentage">
-                    <span>60%</span>
+                    <span>{{session['ee']}}%</span>
                   </div>
                 </div>
                 <div class="progress">
-                  <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
+                  <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="{{session['ee']}}" aria-valuemin="0" aria-valuemax="100" style="width: {{session['ee']}}%;"></div>
                 </div>
               </div>
               
