--- a/app/templates/pages/swift.html
+++ b/app/templates/pages/swift.html
@@ -59,11 +59,11 @@
                     <span>% completed</span>
                   </div>
                   <div class="progress-percentage">
-                    <span>60%</span>
+                    <span>{{session['sw']}}%</span>
                   </div>
                 </div>
                 <div class="progress">
-                  <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
+                  <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="{{session['sw']}}" aria-valuemin="0" aria-valuemax="100" style="width: {{session['sw']}}%;"></div>
                 </div>
               </div>
               
