--- a/app/templates/accounts/login.html
+++ b/app/templates/accounts/login.html
@@ -23,8 +23,8 @@
         <div class="row justify-content-center">
           <div class="col-lg-5">
             <div class="card bg-secondary shadow border-0">
-              <div class="card-header bg-white pb-5">
-                <div class="text-muted text-center mb-3"><small>Sign in</small></div>
+              <!-- <div class="card-header bg-white pb-5">
+                <div class="text-muted text-center mb-3">Sign in</div>
                 <div class="btn-wrapper text-center">
                   <a href="#" class="btn btn-neutral btn-icon">
                     <span class="btn-inner--icon">
@@ -39,17 +39,17 @@
                     <span class="btn-inner--text">Google</span>
                   </a>
                 </div>
-              </div>
+              </div> -->
               <div class="card-body px-lg-5 py-lg-5">
                 <div class="text-center text-muted mb-4">
+                  <h1>Log In</h1>
                   <small>
                     
                     {% if msg %}
                       <span class="text-danger">{{ msg | safe }}</span>
                     {% else %}
-                      Use default credentials: <strong>test / pass</strong>
-                      <br />
-                      OR <a href={{ url_for('register') }} >create your own user</a>   
+
+                       <a href={{ url_for('register') }} >OR Create your own user</a>   
                     {% endif %} 
 
                   </small>
@@ -64,7 +64,7 @@
                       <div class="input-group-prepend">
                         <span class="input-group-text"><i class="ni ni-hat-3"></i></span>
                       </div>
-                      {{ form.username(class="form-control") }}
+                      {{ form.email(class="form-control") }}
                     </div>
                   </div>
 
@@ -76,12 +76,12 @@
                       {{ form.password(class="form-control", type="password") }}
                     </div>
                   </div>
-                  <div class="custom-control custom-control-alternative custom-checkbox">
+                  <!-- <div class="custom-control custom-control-alternative custom-checkbox">
                     <input class="custom-control-input" id="customCheckLogin" type="checkbox">
                     <label class="custom-control-label" for="customCheckLogin">
                       <span>Remember me</span>
                     </label>
-                  </div>
+                  </div> -->
                   <div class="text-center">
                     <button type="submit" name="login" class="btn btn-primary my-4">Sign in</button>
                   </div>
