--- a/app/templates/accounts/register.html
+++ b/app/templates/accounts/register.html
@@ -23,7 +23,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-5">
             <div class="card bg-secondary shadow border-0">
-              <div class="card-header bg-white pb-5">
+              <!-- <div class="card-header bg-white pb-5">
                 <div class="text-muted text-center mb-3"><small>Sign up with</small></div>
                 <div class="text-center">
                   <a href="#" class="btn btn-neutral btn-icon mr-4">
@@ -39,9 +39,10 @@
                     <span class="btn-inner--text">Google</span>
                   </a>
                 </div>
-              </div>
+              </div> -->
               <div class="card-body px-lg-5 py-lg-5">
                 <div class="text-center text-muted mb-4">
+                  <h1>Register</h1>
                   <small>
                     
                     {% if msg %}
@@ -83,7 +84,7 @@
                       {{ form.password(class="form-control", type="password") }}
                     </div>
                   </div>
-                  <div class="text-muted font-italic"><small>password strength: <span class="text-success font-weight-700">strong</span></small></div>
+                  <!-- <div class="text-muted font-italic"><small>password strength: <span class="text-success font-weight-700">strong</span></small></div>
                   <div class="row my-4">
                     <div class="col-12">
                       <div class="custom-control custom-control-alternative custom-checkbox">
@@ -91,7 +92,7 @@
                         <label class="custom-control-label" for="customCheckRegister"><span>I agree with the <a href="#">Privacy Policy</a></span></label>
                       </div>
                     </div>
-                  </div>
+                  </div> -->
                   <div class="text-center">
                     <button type="submit" name="register" class="btn btn-primary mt-4">Register</button>
                   </div>
@@ -101,9 +102,6 @@
             <div class="row mt-3">
                 <div class="col-6">
                   <a href={{ url_for('login') }} class="text-light"><small>Login</small></a>
-                </div>
-                <div class="col-6 text-right">
-                  <a href="https://appseed.us/support" class="text-light"><small>Get support</small></a>
                 </div>
             </div>            
           </div>
