--- a/app/templates/pages/swift.html
+++ b/app/templates/pages/swift.html
@@ -30,19 +30,6 @@
           <div class="card card-profile shadow mt--300">
             <div class="px-4">
 
-                <!-- <div class="col-lg-3 order-lg-2">
-                  <div class="card-profile-image">
-                    <a href="#">
-                      <img src="/static/assets/img/theme/team-4-800x800.jpg" class="rounded-circle" alt="image">
-                    </a>
-                  </div>
-                </div> -->
-                <!-- <div class="col-lg-4 order-lg-3 text-lg-right align-self-lg-center">
-                  <div class="card-profile-actions py-4 mt-lg-0">
-                    <a href="#" class="btn btn-sm btn-info mr-4">Connect</a>
-                    <a href="#" class="btn btn-sm btn-default float-right">Message</a>
-                  </div>
-                </div> -->
                 <div class="text-left">
                   <div class="card-profile-stats" style="padding-bottom: 0%;">
                     <div>
@@ -122,8 +109,17 @@
                 <div style="width: 50%; float:right">
                   <h6>Assignments: </h6>
                     <a data-toggle="modal" data-target="#quiz" href="#quiz" style="background-color:black">
-                      <span class="d-block"><i class="fa fa-file" style="color: #6c757d;"></i>&ensp;<h6 class="d-inline">Section 1 Homework Assignment</h6></span>
+                      <span class="d-block"><i class="fa fa-file" style="color: #6c757d;"></i>&ensp;<h6 class="d-inline">Section 1 Homework Assignment</h6>
+                        {% if doc['numcorrect'] < 1%}
+                        <i class="fas fa-star" hidden></i>
+                        {% elif doc['numcorrect'] < 3%}
+                        <i class="fas fa-star" style="color: #6c757d;"></i>
+                        {% else %}
+                        <i class="fas fa-star" style="color: #90EE90;"></i>
+                        {% endif %}
+                    </span>
                     </a>
+                    
 
                 </div>
             </div>
@@ -202,7 +198,15 @@
                 <div style="width: 50%; float:right">
                   <h6>Assignments: </h6>
                     <a data-toggle="modal" data-target="#quiz2" href="#quiz2" style="background-color:black">
-                      <span class="d-block"><i class="fa fa-file" style="color: #6c757d;"></i>&ensp;<h6 class="d-inline">Storyboard</h6></span>
+                      <span class="d-block"><i class="fa fa-file" style="color: #6c757d;"></i>&ensp;<h6 class="d-inline">Storyboard</h6>
+                        {% if doc['numcorrect2'] < 1 %}
+                        <i class="fas fa-star" hidden></i>
+                        {% elif doc['numcorrect2'] < 3%}
+                        <i class="fas fa-star" style="color: #6c757d;"></i>
+                        {% else %}
+                        <i class="fas fa-star" style="color: #90EE90;"></i>
+                        {% endif %}
+                      </span>
                     </a>
 
                     <!-- <a data-toggle="modal" data-target="#quiz2" href="#quiz2" style="background-color:black">
