--- a/app/templates/includes/navigation.html
+++ b/app/templates/includes/navigation.html
@@ -1,9 +1,10 @@
 
+  <link href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css rel="stylesheet">
   <header class="header-global">
       <nav id="navbar-main" class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-light headroom">
         <div class="container">
           <a class="navbar-brand mr-lg-5" href="/">
-            <img src="/static/assets/img/brand/white.png" alt="brand">
+           <h3 style="color: white;">BEEZCODE</h2>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar_global" aria-controls="navbar_global" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -13,7 +14,7 @@
               <div class="row">
                 <div class="col-6 collapse-brand">
                   <a href="/">
-                    <img src="/static/assets/img/brand/blue.png" alt="brand">
+                    <h3 style="color: white;">BEEZCODE</h2>
                   </a>
                 </div>
                 <div class="col-6 collapse-close">
@@ -27,18 +28,31 @@
 
             {% if 'uid' in session %}
             <ul class="navbar-nav navbar-nav-hover align-items-lg-center">
-              <li class="nav-item dropdown">
-                <a href="#" class="nav-link" data-toggle="dropdown" role="button">
-                  <i class="ni ni-collection d-lg-none"></i>
-                  <span class="nav-link-inner--text">Examples</span>
+              <li class="nav-item">
+                <a class="nav-link nav-link-icon" href="{{ url_for('index') }}" data-toggle="tooltip" 
+                   title="Home Page">
+                   <i class="fas fa-house-user"></i> Home
+                  <span class="nav-link-inner--text d-lg-none">Home</span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link nav-link-icon" href="{{ url_for('courses') }}" data-toggle="tooltip" 
+                   title="Course Selection">
+                   <i class="fas fa-bars"></i> Coursehub
+                  <span class="nav-link-inner--text d-lg-none">Coursehub</span>
+                </a>
+              </li>
+              <!-- <li class="nav-item dropdown">
+                <a href="{{ url_for('swift') }}" class="nav-link" data-toggle="dropdown" role="button">
+                  
+                  <span class="nav-link-inner--text">Course Hub</span>
                 </a>
                 <div class="dropdown-menu">
-                  <a href="/" class="dropdown-item">Landing</a>
-                  <a href="{{ url_for('article') }}" class="dropdown-item">Article</a>
-                  <a href="{{ url_for('register') }}" class="dropdown-item">Register</a>
-                  <a href="{{ url_for('courses') }}" class="dropdown-item">Course Hub</a>
+                  <a href="{{ url_for('swift') }}" class="dropdown-item">Swift</a>
+                  <a href="{{ url_for('ml') }}" class="dropdown-item">Machine Learning</a>
+                  <a href="{{ url_for('ee') }}" class="dropdown-item">Electrical Engineering</a>
                 </div>
-              </li>
+              </li> -->
             </ul>
             {% endif %}
             
@@ -48,9 +62,8 @@
 
                 <li class="nav-item">
                   <a class="nav-link nav-link-icon" href="{{ url_for('logout') }}" data-toggle="tooltip" 
-                     title="End Session for Akshay">
-                     <!-- fix this pls -->
-                    <i class="fa fa-sign-out"></i> Logout
+                     title="End Session for {{session['uname'] | capitalize}}">
+                     <i class="fas fa-sign-out-alt"></i> Logout
                     <span class="nav-link-inner--text d-lg-none">Logout</span>
                   </a>
                 </li>
@@ -60,21 +73,20 @@
                 <li class="nav-item">
                   <a class="nav-link nav-link-icon" href="{{ url_for('login') }}" data-toggle="tooltip" 
                      title="Authenticate">
-                    <i class="fa fa-sign-in"></i> Login
+                     <i class="fas fa-sign-in-alt"></i> Login
                     <span class="nav-link-inner--text d-lg-none">Login</span>
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link nav-link-icon" href="{{ url_for('register') }}" data-toggle="tooltip" 
+                     title="Register for Free">
+                     <i class="fas fa-user-plus"></i> Register
+                    <span class="nav-link-inner--text d-lg-none">Register</span>
                   </a>
                 </li>
  
               {% endif %}
 
-              <!-- <li class="nav-item d-none d-lg-block ml-lg-4">
-                <a href="https://appseed.us/apps/flask-apps/flask-argon-design-system" target="_blank" class="btn btn-neutral btn-icon">
-                  <span class="btn-inner--icon">
-                    <i class="fa fa-cloud-download mr-2"></i>
-                  </span>
-                  <span class="nav-link-inner--text">Product</span>
-                </a>
-              </li> -->
             </ul>
           </div>
         </div>
