add color changes to courses page

--- a/app/templates/pages/courses.html
+++ b/app/templates/pages/courses.html
@@ -7,7 +7,7 @@
   <main class="profile-page">
     <section class="section-profile-cover section-shaped my-0">
       <!-- Circles background  shape-primary -->
-      <div class="shape shape-style-1 bg-gradient-warning alpha-4">
+      <div class="shape shape-style-1 bg-gradient-info alpha-4">
         <span></span>
         <span></span>
         <span></span>
@@ -22,62 +22,24 @@
           <polygon class="fill-white" points="2560 0 2560 100 0 100"></polygon>
         </svg>
       </div>
-
+      <br>
+      <br>
+      <br>
+      <div class="container py-lg-md d-flex">
+        <div class="col px-0">
+          <div class="row">
+            <div class="col-lg-6">
+              <h1 class="display-3 text-white">Course Hub</h1>
+            </div>
+          </div>
+        </div>
+      </div>
       
       
       </div>
     </section>
-    <!-- <section class="section">
-        <div class="container">
-          <div class="mt--300">
-            <div class="px-4">
-              <div class="row justify-content-center">
-                <div class="col-md-4">
-                    <div class="card mb-4 shadow-sm" style="width: 18rem;">
-                        <img src="https://www.talkwalker.com/images/2020/blog-headers/image-analysis.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Intro to Electrical Engineering</h5>
-                          <p class="card-text">In this course, we will going over the basics of EE and reviewing some high school concepts</p>
-                          <div class="text-center">
-                            <a href="#" class="btn btn-primary">Take Course</a>
-                          </div>
-                        </div>
-                      </div>
-    
-                </div>
 
-                <div class="col-md-4 ">
-                    <div class="card mb-4 shadow-sm" style="width: 18rem;">
-                        <img src="https://i.imgur.com/RRUe0Mo.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Intro to Machine Learning</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <div class="text-center">
-                            <a href="#" class="btn btn-primary">Take Course</a>
-                          </div>
-                        </div>
-                      </div>
-    
-                </div>
-                <div class="col-md-4">
-                    <div class="card mb-4 shadow-sm" style="width: 18rem;">
-                        <img src="https://static01.nyt.com/images/2019/11/05/science/28TB-SUNSET1/merlin_163473282_fe17fc6b-78b6-4cdd-b301-6f63e6ebdd7a-superJumbo.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Intro to iOS App Development</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <div class="text-center">
-                            <a href="#" class="btn btn-primary">Take Course</a>
-                          </div>
-                          
-                        </div>
-                      </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section> -->
-      <section class="section section-lg pt-lg-0 mt--300">
+      <section class="section section-lg pt-lg-0 mt--300" style="display: block;"> 
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-lg-12">
