--- a/app/templates/courses/swift.html
+++ b/app/templates/courses/swift.html
@@ -5,6 +5,15 @@
 {% block content %}
 
 
+<head>
+  <style>
+    .code-block {
+      padding-bottom: 10px;
+      padding-top: 10px;
+      padding-left: 16px;
+    }
+    </style>
+</head>
 
   <main class="profile-page">
     <section class="section-profile-cover section-shaped my-0">
@@ -62,10 +71,10 @@
       </section>
 
       <br>
-    <section class="section" style="display: block;"> 
+    <section class="section" > 
       <div class="container">
         <div class="card card-profile shadow mt--300">
-          <div class="px-4">
+          <div class="px-4" style="display: block;">
             <div class="row justify-content-start">
 
               <div class="text-left">
@@ -212,9 +221,26 @@
           <h1 class="display-4">Section Text</h1>
           <p>
 
+              Vivamus sagittis lacus vel auguelaoreet <mark>rutrum</mark> faucibus dolor auctor. Duis mollis, est non commodo luctus.
+              <br>
               Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo luctus.
-
           </p>
+          <div class="jumbotron code-block">
+            <code style="color: black;">
+                // Use this to show example code <br>
+                name = 'Strimg' <br>
+                sdsfs
+            </code>
+
+          </div>
+          
+          <ul>
+            <li>Bullet Point 1</li>
+            <li>Bullet Point 2</li>
+            <li>Bullet Point 3</li>
+            <li>Bullet Point 4</li>
+          </ul>
+
           <img src="https://image.shutterstock.com/image-photo/white-transparent-leaf-on-mirror-260nw-1029171697.jpg" alt="">
         </div>
         <div class="modal-footer">
@@ -345,10 +371,12 @@
 
 
 <!-- Add pausing functionality instead -->
+<script src="/static/assets/js/question.js"></script>
 <script>
    
   function stop(){
-    var iframe = document.getElementById('sauce');
+    debugger;
+    var iframe = document.getElementById('sauce'); // id of youtube video
     iframe.src = iframe.src;
 }
 
@@ -384,91 +412,11 @@
 
 
   $(document).ready(function() {
+    debugger; 
     prep_modal(checker="answer", submitter="btn", hidden_val="numcorrect", questions=quiz, questionId=quizId, name="q0");
     prep_modal(checker="answer2", submitter="btn2", hidden_val="numcorrect2", questions=quiz2, questionId=quizId2, name="q1");
   });
   
-
-  
-  // var check_ans = document.querySelector('#answer');
-  
-  function setQuiz(questions, counter, questionId){
-    document.getElementById(questionId[4]).innerHTML = questions.questions[counter];
-    document.getElementById(questionId[0]).innerHTML = questions.opt1[counter];
-    document.getElementById(questionId[1]).innerHTML = questions.opt2[counter];
-    document.getElementById(questionId[2]).innerHTML = questions.opt3[counter];
-    document.getElementById(questionId[3]).innerHTML = questions.opt4[counter];
-  }
-  
-
-  function prep_modal(checker, submitter, hidden_val, questions, questionId, name){
-//    $(".modal").each(function() {
-      let correct = 0;
-      let counter = 0;
-      console.log(`The counter is ${counter}`)
-      const corrected = document.querySelector(`#${checker}`);
-      const submit = document.querySelector(`#${submitter}`);
-      
-
-      setQuiz(questions=questions, counter=counter, questionId=questionId);
-
-      $(`#${checker}`).click(function() {
-        let rbs = document.querySelectorAll(`input[name=${name}]`); //try string interpolation
-        let selectedValue;
-        for (const rb of rbs) {
-            if (rb.checked) {
-                selectedValue = rb.value;
-                break;
-            }
-        }
-
-        if(selectedValue === questions.correct[counter]){
-          let cor = document.getElementById(selectedValue);
-          cor.classList.add("has-success");
-          correct++;
-          if(counter == questions.questions.length - 1){
-            corrected.disabled = true
-            submit.disabled = false
-            alert(correct)
-          }
-          if (counter < questions.questions.length - 1){
-            counter++;
-          }
-            
-          setTimeout(() => { 
-            setQuiz(questions=questions, counter=counter, questionId=questionId);
-            cor.classList.remove("has-success")
-          }, 2000);
-          
-        } else{
-          let inc = document.getElementById(selectedValue);
-          let cor = document.getElementById(questions.correct[counter]);
-          inc.classList.add("has-danger");
-          cor.classList.add("has-success");
-          if(counter == questions.questions.length-1){
-            corrected.disabled = true
-            submit.disabled = false
-            alert(correct)
-          }
-          if (counter < questions.questions.length-1){
-            counter++;
-          }  
-          setTimeout(() => { setQuiz(questions=questions, counter=counter, questionId=questionId);
-            inc.classList.remove("has-danger");
-            cor.classList.remove("has-success");
-          }, 2000);
-          
-        }
-        // alert("Correct Value is : " +correct) //remove later
-        $(`#${hidden_val}`).val(correct);
-      });
-
-      
- //   });
-
-  }
-    
-
 </script>
 
 {% endblock content %}
