--- a/app/templates/includes/navigation.html
+++ b/app/templates/includes/navigation.html
@@ -4,7 +4,7 @@
       <nav id="navbar-main" class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-light headroom">
         <div class="container">
           <a class="navbar-brand mr-lg-5" href="/">
-           <h3 style="color: white;">BEEZCODE</h2>
+           <h3 style="color: white;">Beezcode</h2>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar_global" aria-controls="navbar_global" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -14,14 +14,12 @@
               <div class="row">
                 <div class="col-6 collapse-brand">
                   <a href="/">
-                    <h3 style="color: white;">BEEZCODE</h2>
+                    <h3 style="color: white;">Beezcode</h2>
                   </a>
                 </div>
                 <div class="col-6 collapse-close">
-                  <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar_global" aria-controls="navbar_global" aria-expanded="false" aria-label="Toggle navigation">
-                    <span></span>
-                    <span></span>
-                  </button>
+                  <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar_global" aria-controls="navbar_global" aria-expanded="false" aria-label="Toggle navigation"></button>
+                  
                 </div>
               </div>
             </div>
@@ -32,27 +30,16 @@
                 <a class="nav-link nav-link-icon" href="{{ url_for('index') }}" data-toggle="tooltip" 
                    title="Home Page">
                    <i class="fas fa-house-user"></i> Home
-                  <span class="nav-link-inner--text d-lg-none">Home</span>
+                  <span class="nav-link-inner--text d-lg-none"></span>
                 </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link nav-link-icon" href="{{ url_for('courses') }}" data-toggle="tooltip" 
                    title="Course Selection">
                    <i class="fas fa-bars"></i> Coursehub
-                  <span class="nav-link-inner--text d-lg-none">Coursehub</span>
+                  <span class="nav-link-inner--text d-lg-none"></span>
                 </a>
               </li>
-              <!-- <li class="nav-item dropdown">
-                <a href="{{ url_for('swift') }}" class="nav-link" data-toggle="dropdown" role="button">
-                  
-                  <span class="nav-link-inner--text">Course Hub</span>
-                </a>
-                <div class="dropdown-menu">
-                  <a href="{{ url_for('swift') }}" class="dropdown-item">Swift</a>
-                  <a href="{{ url_for('ml') }}" class="dropdown-item">Machine Learning</a>
-                  <a href="{{ url_for('ee') }}" class="dropdown-item">Electrical Engineering</a>
-                </div>
-              </li> -->
             </ul>
             {% endif %}
             
@@ -64,7 +51,7 @@
                   <a class="nav-link nav-link-icon" href="{{ url_for('logout') }}" data-toggle="tooltip" 
                      title="End Session for {{session['uname'] | capitalize}}">
                      <i class="fas fa-sign-out-alt"></i> Logout
-                    <span class="nav-link-inner--text d-lg-none">Logout</span>
+                    <span class="nav-link-inner--text d-lg-none"></span>
                   </a>
                 </li>
 
@@ -74,14 +61,14 @@
                   <a class="nav-link nav-link-icon" href="{{ url_for('login') }}" data-toggle="tooltip" 
                      title="Authenticate">
                      <i class="fas fa-sign-in-alt"></i> Login
-                    <span class="nav-link-inner--text d-lg-none">Login</span>
+                    <span class="nav-link-inner--text d-lg-none"></span>
                   </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link nav-link-icon" href="{{ url_for('register') }}" data-toggle="tooltip" 
                      title="Register for Free">
                      <i class="fas fa-user-plus"></i> Register
-                    <span class="nav-link-inner--text d-lg-none">Register</span>
+                    <span class="nav-link-inner--text d-lg-none"></span>
                   </a>
                 </li>
  
